--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="47dp"
         android:layout_marginTop="177dp"
         android:layout_marginEnd="47dp"
+        android:layout_marginBottom="100dp"
         android:background="@color/latte"
         android:fontFamily="@font/lobster"
         android:shadowDx="20"
@@ -45,7 +46,6 @@
         android:id="@+id/messagetextView"
         android:layout_width="317dp"
         android:layout_height="133dp"
-        android:layout_marginStart="205dp"
         android:layout_marginTop="28dp"
         android:layout_marginBottom="212dp"
         android:text=""
