--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -48,7 +48,9 @@
         android:layout_height="133dp"
         android:layout_marginTop="28dp"
         android:layout_marginBottom="212dp"
+        android:background="@color/latte_brown"
         android:text=""
+        android:textColor="@color/mocha"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
