--- a/app/src/main/res/layout/topiclist.xml
+++ b/app/src/main/res/layout/topiclist.xml
@@ -1,34 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/library"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/textViewTopicsTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/latte"
+        android:fontFamily="@font/calistoga"
+        android:padding="16dp"
         android:text="Topics"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:padding="16dp" />
+        android:textAlignment="center"
+        android:textSize="22sp"
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/listViewTopics"
         android:layout_width="match_parent"
-        android:layout_height="361dp" />
+        android:layout_height="361dp"
+        android:textAlignment="center" />
 
     <Button
         android:id="@+id/buttonAddTopic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Topic" />
+        android:fontFamily="@font/calistoga"
+        android:text="Add Topic"
+        android:textColor="@color/mocha"
+        android:textColorHighlight="@color/latte"
+        android:textColorLink="@color/latte"
+        android:textSize="18sp"
+        app:backgroundTint="@color/latte" />
+
     <Button
         android:id="@+id/buttonOfferlist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Offered Topic list" />
-
+        android:fontFamily="@font/calistoga"
+        android:text="Offered Topic list"
+        android:textColor="@color/mocha"
+        android:textSize="18sp"
+        app:backgroundTint="@color/latte" />
 
 
 </LinearLayout>
