--- a/app/src/main/res/layout/student_ratings.xml
+++ b/app/src/main/res/layout/student_ratings.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RatingBar
-        android:id="@+id/ratingBar"
+        android:id="@+id/student_ratingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="Rating the tutor"
